# ALSE_2420

./: .Tetris.sh.swp  PARCIAL.cpp  README.md  ejercicio clase  main.cpp  parcial.cpp  tarea_1.cpp
EJE2/: CMakeLists.txt  main.cpp
Ej1/: main.c  main.cpp
Ej2/: CMakeLists.txt  tarea.cpp
Parcial_es/: main.cpp
Qt_example/ejemplo/: dia_div.cpp  dia_div.h  dia_div.ui  ejemplopp.cpp  ejemplopp.h
Taller_struct/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  complejos  complex.h  main.cpp
Taller_struct/output/: main
Tarea1_ArianneP_JoseV/: CMakeLists.txt  main.cpp
clase_22_10_24/: complex.h  main.cpp  polinomios.cpp  polinomios.h
clase_complejo/: complex.cpp  complex.h  main.cpp
db_sqlite/ejercicio_clase_21_11_24/: CMakeLists.txt  create_table.cpp  datos_table.cpp  imprimir_table.cpp
ejdb/: CMakeLists.txt  main.cpp
eje2/: eje2  main.cpp  swich.cpp
eje3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ejemplo3.cpp  funcion
eje4/: CMakeCache.txt  Makefile  cmake_install.cmake  datos.cpp  main.cpp
ejpractico/: CMakeLists.txt  main.cpp
examen/: datos.cpp
p2_pra/: empleado.cpp  empleado.h  main.cpp
polinomios/: main.cpp  polinomio.cpp  polinomio.h
quiz/: datos.cpp
sensores_db/code_db/: CMakeLists.txt  main.cpp
taller_sin/: CMakeLists.txt  main.cpp
tarea1/: CMakeLists.txt  eje1  tarea.cpp
